# par-qsort

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  common.h  parsort.h  seqsort.h
tests/: CMakeLists.txt  tests.cpp
